last re-reading, sent for technical review

--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -195,8 +195,16 @@ For example, let's compare a rather big package (`{shiny}`) with a small one (`{
 ```{r 01-big-shiny-6 }
 library(cloc)
 library(dplyr)
-shiny_cloc <- cloc_cran("shiny", .progress = FALSE, repos = "http://cran.irsn.fr/" )
-attempt_cloc <- cloc_cran("attempt", .progress = FALSE, repos = "http://cran.irsn.fr/" )
+shiny_cloc <- cloc_cran(
+  "shiny", 
+  .progress = FALSE, 
+  repos = "http://cran.irsn.fr/"
+)
+attempt_cloc <- cloc_cran(
+  "attempt", 
+  .progress = FALSE, 
+  repos = "http://cran.irsn.fr/" 
+)
 clocs <- bind_rows(
   shiny_cloc, 
   attempt_cloc
@@ -230,7 +238,11 @@ Cyclomatic complexity is computed based on a control-flow graph
 representation of an algorithm. 
 For example, here is a simple control flow for an `ifelse` statement:
 
-![](img/controlflow.png)
+(ref:controlflowcap) Control-flow graph representation of an algorithm.
+
+```{r 01-big-shiny-1-bis, echo=FALSE, fig.cap="(ref:controlflowcap)", out.width='100%'}
+knitr::include_graphics("img/controlflow.png")
+```
 
 _(The following paragraph details the algorithm implementation, feel free to skip it if you are not interested in the implementation details)_  
 The complexity number is then computed by taking the number of nodes, subtracting the number of edges, plus two times the number of connected components of this graph. 
@@ -252,7 +264,7 @@ install.packages("cyclocomp")
 
 The `{cyclocomp}` package comes with three main functions: `cyclocomp()`, `cyclocomp_package()`, and `cyclocomp_package_dir()`. 
 While developing your application, the one you will be interested in is `cyclocomp_package_dir()`: building successful shiny apps with the `{golem}` framework means you will be building your app as a package (we will get back on that later).
- 
+
 Here is for example the cyclomatic complexity of the default golem template (assuming it is located in a `golex/` subdirectory):
 
 ```{r 01-big-shiny-9, include = FALSE}
