--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -1,5 +1,14 @@
 # Introduction to `{golem}` {#golem}
 
+<style>
+img.left {
+  float: left;
+  margin-right: 1em;
+}
+</style>
+
+<img src="img/thinkr-hex-golem2.png" class = "left" width = "20%">
+
 ```{r 04-golem-1, include = FALSE}
 knitr::opts_chunk$set(comment = "")
 ```
@@ -42,7 +51,11 @@ While the current version of the dev version is:
 
 ```{r 04-golem-5 }
 x <- tempfile()
-download.file("https://raw.githubusercontent.com/ThinkR-open/golem/dev/DESCRIPTION", x)
+url <- paste0(
+  "https://raw.githubusercontent.com/", 
+  "ThinkR-open/golem/dev/DESCRIPTION"
+)
+download.file(url, x)
 desc::desc_get_version(x)
 ```
 
