--- a/08-css.Rmd
+++ b/08-css.Rmd
@@ -15,13 +15,26 @@ Then, if you go on the extension and choose CSS, click "Disable All Style", to s
 
 For example, here is what [rtask.thinkr.fr](https://rtask.thinkr.fr) looks like: 
 
-![](img/rtask_with_css.png)
+(ref:rtaskcss) https://rtask.thinkr.fr with CSS
+
+```{r 08-css-1-bis, echo=FALSE, fig.cap="(ref:rtaskcss)", out.width="100%"}
+knitr::include_graphics("img/rtask_with_css.png")
+```
+
 
 And here is what it looks like without CSS:
 
-![](img/rtask_without_css.png)
+(ref:rtaskwithoutcss) https://rtask.thinkr.fr without CSS
 
-![](img/rtask_without_css2.png)
+```{r 08-css-2-bis, echo=FALSE, fig.cap="(ref:rtaskwithoutcss)", out.width="100%"}
+knitr::include_graphics("img/rtask_without_css.png")
+```
+
+(ref:rtaskwithoutcss2) https://rtask.thinkr.fr without CSS
+
+```{r 08-css-3-bis, echo=FALSE, fig.cap="(ref:rtaskwithoutcss2)", out.width="100%"}
+knitr::include_graphics("img/rtask_without_css2.png")
+```
 
 CSS now seems pretty useful right?
 
@@ -56,7 +69,12 @@ server <- function(
 shinyApp(ui, server)
 ```
 
-![](img/no-css-shiny.png)
+(ref:nocssshiny) Shiny without CSS
+
+```{r 08-css-4-bis, echo=FALSE, fig.cap="(ref:nocssshiny)", out.width="100%"}
+knitr::include_graphics("img/no-css-shiny.png")
+```
+
 
 to (with `fluidPage`):
 
@@ -82,8 +100,12 @@ server <- function(
 shinyApp(ui, server)
 ```
 
+(ref:cssshiny) Shiny with its default CSS
 
-![](img/css-shiny.png)
+```{r 08-css-5, echo=FALSE, fig.cap="(ref:cssshiny)", out.width="100%"}
+knitr::include_graphics("img/css-shiny.png")
+```
+
 
 Yes, that is subtle, but you can see how it makes the difference on larger apps.
 
@@ -170,7 +192,12 @@ server <- function(
 shinyApp(ui, server)
 ```
 
-![](img/css-red.png)
+(ref:cssshinyred) Shiny with a red title
+
+```{r 08-css-6, echo=FALSE, fig.cap="(ref:cssshinyred)", out.width="100%"}
+knitr::include_graphics("img/css-red.png")
+```
+
 
 But this method loses all the advantages of CSS, notably the possibility to apply style to multiple elements. 
 Use it with caution.
@@ -181,7 +208,7 @@ If you had a `tags$style()` somewhere inside your UI code (generally at the very
 
 Here is an example: 
 
-```{r 08-css-4 }
+```{r 08-css-4, eval = FALSE}
 library(shiny)
 ui <- function(request){
   tagList(
@@ -205,7 +232,12 @@ server <- function(
 shinyApp(ui, server)
 ```
 
-![](img/css-red.png)
+(ref:cssshinyred2) Shiny with a red title
+
+```{r 08-css-7, echo=FALSE, fig.cap="(ref:cssshinyred2)", out.width="100%"}
+knitr::include_graphics("img/css-red.png")
+```
+
 
 This works, but should not be considered as the best option: indeed, if you have a large amount of CSS code to insert to your app, it can make the code harder to read as it adds a large amount of visual noise.
 
