--- a/09-step-by-step-prototype.Rmd
+++ b/09-step-by-step-prototype.Rmd
@@ -75,13 +75,20 @@ First, fill the DESCRIPTION file by adding information about the package that wi
 
 ```{r 09-step-by-step-prototype-4, eval = FALSE}
 golem::fill_desc(
-  pkg_name = "ipsumapp", # The Name of the package containing the App 
-  pkg_title = "PKG_TITLE", # The Title of the package containing the App 
-  pkg_description = "PKG_DESC.", # The Description of the package containing the App 
-  author_first_name = "AUTHOR_FIRST", # Your First Name
-  author_last_name = "AUTHOR_LAST", # Your Last Name
-  author_email = "AUTHOR@MAIL.COM", # Your Email
-  repo_url = NULL # The URL of the GitHub Repo (optional) 
+  # The Name of the package containing the App 
+  pkg_name = "ipsumapp", 
+  # The Title of the package containing the App 
+  pkg_title = "PKG_TITLE", 
+  # The Description of the package containing the App 
+  pkg_description = "PKG_DESC.", 
+  # Your First Name
+  author_first_name = "AUTHOR_FIRST", 
+  # Your Last Name
+  author_last_name = "AUTHOR_LAST", 
+  # Your Email
+  author_email = "AUTHOR@MAIL.COM", 
+  # The URL of the GitHub Repo (optional) 
+  repo_url = NULL 
 )   
 ```
 
@@ -92,7 +99,8 @@ Then, call the `golem::set_golem_options()` function, it will add information to
 If you want to use the MIT license, add README, a code of conduct, a lifecycle badge, and NEWS
 
 ```{r 09-step-by-step-prototype-5, eval = FALSE}
-usethis::use_mit_license( name = "Golem User" )  # You can set another license here
+# You can set another license here
+usethis::use_mit_license( name = "Golem User" )  
 usethis::use_readme_rmd( open = FALSE )
 usethis::use_code_of_conduct()
 usethis::use_lifecycle_badge( "Experimental" )
