--- a/10-prototyping.Rmd
+++ b/10-prototyping.Rmd
@@ -6,7 +6,7 @@
 
 > Prototyping first may help keep you from investing far too much time for marginal gains.
 
-http://www.catb.org/~esr/writings/taoup/html/ch01s06.html#rule_of_optimization
+`r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch01s06.html#rule_of_optimization")`
 
 And yet another Rule from the Art of Unix Programming: "Rule of Optimization: Prototype before polishing. __Get it working before you optimize it__."
 
@@ -15,7 +15,11 @@ Getting things to work before trying to optimize the app is always a good approa
 + Making things work before working on low level optimization makes the whole engineering process easier: having a "minimal viable product" that works, even if slowly and not perfectly, gives a stronger sense of success to the project. 
 For example if you are building a vehicle, it feels more of a success to start with a skateboard than with a wheel: you quickly have a product that can be used to move, not waiting for the end of the project before finally having something useful.
 
-![](img/mvp.png)
+(ref:mvp) Building a Minimum Viable Product
+
+```{r 10-prototyping-1-bis, echo=FALSE, fig.cap="(ref:mvp)", out.width="100%"}
+knitr::include_graphics("img/mvp.png")
+```
 
 + Abstraction is hard, and makes the code base harder to work with. 
 You have heard a lot that if you are copying and pasting something more than twice, you should write a function. 
@@ -80,6 +84,12 @@ When prototyping the UI for an application, we will not be focusing on building 
 To do that, you can use the `{shinipsum}` package, which has been designed to generate random `{shiny}` [@R-shiny] elements.
 If you are familiar with "lorem ipsum", the fake text generator that is used in software design as a placeholder for text, the idea is the same: generating placeholders for Shiny outputs. 
 
+`{shinipsum}` can be installed from CRAN with:
+
+```{r eval=FALSE}
+install.packages("shinipsum")
+```
+
 You can install this package from GitHub with:
 
 ```{r 10-prototyping-1, eval=FALSE}
@@ -97,12 +107,16 @@ library(shinipsum)
 library(ggplot2)
 ```
 
-```{r 10-prototyping-3 }
+(ref:randomplot1) A random plot
+
+```{r 10-prototyping-3, fig.cap="(ref:randomplot1)", out.width="100%"}
 random_ggplot() + 
   labs(title = "Random plot") 
 ```
 
-```{r 10-prototyping-4 }
+(ref:randomplot2) A random plot
+
+```{r 10-prototyping-4, fig.cap="(ref:randomplot2)", out.width="100%"}
 random_ggplot() + 
   labs(title = "Random plot") 
 ```
@@ -137,7 +151,11 @@ server <- function(input, output, session) {
 shinyApp(ui, server)
 ```
 
-![](img/shinipsumapp.png)
+(ref:shinipsum) An app built with `{shinipsum}`
+
+```{r 10-prototyping-2-bis, echo=FALSE, fig.cap="(ref:shinipsum)", out.width="100%"}
+knitr::include_graphics("img/shinipsumapp.png")
+```
 
 Other `{shinipsum}` functions include: 
 
