--- a/13-secure.Rmd
+++ b/13-secure.Rmd
@@ -95,7 +95,7 @@ The modifications made in these development branches will then be transferred (d
 
 (ref:gitbranchcap) Branches in git.
 
-```{r 13-secure-1, echo=FALSE, fig.cap="(ref:gitbranchcap)"}
+```{r 13-secure-1, echo=FALSE, fig.cap="(ref:gitbranchcap)", out.width='100%'}
 knitr::include_graphics("img/Git_branches_fork.png")
 ```
 
@@ -153,7 +153,7 @@ Here is a summary of this process:
 
 (ref:gitflowcap) Presentation of a git flow (Vincent Driessen, http://nvie.com).
 
-```{r 13-secure-2, echo=FALSE, fig.cap="(ref:gitflowcap)"}
+```{r 13-secure-2, echo=FALSE, fig.cap="(ref:gitflowcap)", out.width='100%'}
 knitr::include_graphics("img/GitFlowHotfixBranch.png")
 ```
 
