--- a/18-javascript.Rmd
+++ b/18-javascript.Rmd
@@ -14,13 +14,16 @@ For example, this simple `{shiny}` [@R-shiny] code returns a series of HTML tags
 ``` r
 fluidPage(
   h2("hey"), 
-  actionButton("act", "Validate")
+  textInput("act", "Ipt")
 )
 ```
 ``` html
 <div class="container-fluid">
   <h2>hey</h2>
-  <button id="act" type="button" class="btn btn-default action-button">Validate</button>
+  <div class="form-group shiny-input-container">
+    <label class="control-label" for="act">Ipt</label>
+    <input id="act" type="text" class="form-control" value=""/>
+  </div>
 </div>
 ```
 
@@ -96,14 +99,17 @@ Consider this piece of code:
 library(shiny)
 fluidPage(
   titlePanel("Hello Shiny"), 
-  actionButton("go", "go")
+   textInput("act", "Ipt")
 )
 ```
 
 ``` html
 <div class="container-fluid">
   <h2>Hello Shiny</h2>
-  <button id="go" type="button" class="btn btn-default action-button">go</button>
+  <div class="form-group shiny-input-container">
+    <label class="control-label" for="act">Ipt</label>
+    <input id="act" type="text" class="form-control" value=""/>
+  </div>
 </div>
 ```
 
@@ -171,9 +177,12 @@ For example, the code below adds an event to the `input` when a key is pressed, 
 ``` html
 <input type="text" id = "plop">
 <script> 
-  document.getElementById("plop").addEventListener("keypress", function(){
-    alert("pouet")
-  })
+  document.getElementById("plop").addEventListener(
+    "keypress", 
+    function(){
+      alert("pouet")
+    }
+  )
 </script>
 ```
 
@@ -286,10 +295,10 @@ observeEvent(input$ok, {
 })
 ```
 
-+ `$('#id').css('color', 'green');` / `document.getElementById("demo").style.color = "green";` changes the CSS attributes of the selected element(s). 
++ `$('#id').css('color', 'green');`, or in vanilla JavaScript `document.getElementById("demo").style.color = "green";` changes the CSS attributes of the selected element(s). 
 Here, we are switching to green on the `#id` element.
 
-+ `$("#id").text("this)` / `document.getElementById("id").innerText = "this";` changes the text content to "this". 
++ `$("#id").text("this)`, or in vanilla JavaScript `document.getElementById("id").innerText = "this";` changes the text content to "this". 
 This can be used to replace 
 
 ```{r 18-javascript-5, eval = FALSE}
@@ -302,7 +311,7 @@ output$ui <- renderUI({
 })
 ```
 
-+ `$("#id").remove();` / `var elem = document.querySelector('#some-element'); elem.parentNode.removeChild(elem);` completely removes the element from the DOM. 
++ `$("#id").remove();`, or in vanilla JavaScript `var elem = document.querySelector('#some-element'); elem.parentNode.removeChild(elem);` completely removes the element from the DOM. 
 It can be used as a replacement for `shiny::removeUI()`, or as a conditional UI. 
 
 ### Where to put them - Back to JavaScript Events
