--- a/book.bib
+++ b/book.bib
@@ -100,7 +100,8 @@ Eprint = {arXiv:2001.10641},
 
 @book{lemaire2020,
  Author = {Maude Lemaire},
- title = {Refactoring At Scale} publisher = {Henry Holt},
+ title = {Refactoring At Scale}, 
+ publisher = {Henry Holt},
  year = {2020},
  month = {dec},
  isbn = {9781492075516},
