--- a/index.Rmd
+++ b/index.Rmd
@@ -10,18 +10,19 @@ colorlinks: yes
 lot: yes
 lof: yes
 site: bookdown::bookdown_site
-description: "Engineering Production-Grade Shiny Apps"
+description: "A book about engineering shiny application that will later be sent to production. This book cover project management, structuring your project, building a solid testing suite, and optimizing your codebase. We describe in this book a specific workflow: design, prototype, build, strengthen and deploy."
 favicon: img/favicon.ico
 github-repo: ThinkR-open/building-shiny-apps-workflow
 graphics: yes
 nocite: '@*'
-#cover-image: images/cover.jpg
+cover-image: https://raw.githubusercontent.com/ThinkR-open/engineering-shiny-book/master/img/engineering-shiny.jpg
 ---
 
 ```{r index-1, include = FALSE}
 knitr::opts_chunk$set( 
   comment = "", 
-  cache = FALSE
+  cache = TRUE,
+  fig.align = "center"
 )
 
 options(
