--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -57,9 +57,11 @@ Drawing a concept map is a way to organize the knowledge of a specific topic.
 When doing this for a piece software, we are not trying to add technical details about the way things are implemented: we are listing down the various "actors" (the concepts) around our app, with the relationships they have. 
 For example, here is a very simple concept map of the `{hexmake}` [@R-hexmake] app. 
 
-![](img/hexmakemap.png)
+(ref:hexmakeconceptmap) `{hexmake}` concept map, built with XMind (https://www.xmind.net)
 
-> Built with XMind (https://www.xmind.net)
+```{r 07-step-by-step-design-1, echo=FALSE, fig.cap="(ref:hexmakeconceptmap)", out.width="100%"}
+knitr::include_graphics("img/hexmakemap.png")
+```
 
 As you can see, we are not detailing the technical implementations: we are not writing the external database specification, the connection process, how the different modules interact with each other... 
 The goal of a concept map is to think about the big picture, to see the "who and what" of the application. 
