--- a/10-prototyping.Rmd
+++ b/10-prototyping.Rmd
@@ -17,7 +17,7 @@ For example if you are building a vehicle, it feels more of a success to start w
 
 (ref:mvp) Building a Minimum Viable Product
 
-```{r 10-prototyping-1-bis, echo=FALSE, fig.cap="(ref:mvp)", out.width="100%"}
+```{r 10-prototyping-1, echo=FALSE, fig.cap="(ref:mvp)", out.width="100%"}
 knitr::include_graphics("img/mvp.png")
 ```
 
@@ -86,13 +86,13 @@ If you are familiar with "lorem ipsum", the fake text generator that is used in 
 
 `{shinipsum}` can be installed from CRAN with:
 
-```{r eval=FALSE}
+```{r 10-prototyping-2, eval=FALSE}
 install.packages("shinipsum")
 ```
 
 You can install this package from GitHub with:
 
-```{r 10-prototyping-1, eval=FALSE}
+```{r 10-prototyping-3, eval=FALSE}
 remotes::install_github("Thinkr-open/shinipsum")
 ```
 
@@ -102,21 +102,21 @@ If we run this code two time, we should get different results
 ^[Well, there is a probability that we will get the same plot twice, and but that is the beauty of randomness.]
 :
 
-```{r 10-prototyping-2 }
+```{r 10-prototyping-4 }
 library(shinipsum)
 library(ggplot2)
 ```
 
 (ref:randomplot1) A random plot
 
-```{r 10-prototyping-3, fig.cap="(ref:randomplot1)", out.width="100%"}
+```{r 10-prototyping-5, fig.cap="(ref:randomplot1)", out.width="100%"}
 random_ggplot() + 
   labs(title = "Random plot") 
 ```
 
 (ref:randomplot2) A random plot
 
-```{r 10-prototyping-4, fig.cap="(ref:randomplot2)", out.width="100%"}
+```{r 10-prototyping-6, fig.cap="(ref:randomplot2)", out.width="100%"}
 random_ggplot() + 
   labs(title = "Random plot") 
 ```
@@ -124,7 +124,7 @@ random_ggplot() +
 Of course, the idea is to combine this with a Shiny interface, for example `random_ggplot()` will be used with a `renderPlot()` and `plotOutput()`.
 And as we want to prototype but still be close to what the app might look like, these functions take arguments that can shape the output: for example, `random_ggplot()` has a `type` parameter that can help you select a specific geom. 
 
-```{r 10-prototyping-5, eval = FALSE}
+```{r 10-prototyping-7, eval = FALSE}
 library(shiny)
 library(shinipsum)
 library(DT)
@@ -153,7 +153,7 @@ shinyApp(ui, server)
 
 (ref:shinipsum) An app built with `{shinipsum}`
 
-```{r 10-prototyping-2-bis, echo=FALSE, fig.cap="(ref:shinipsum)", out.width="100%"}
+```{r 10-prototyping-8, echo=FALSE, fig.cap="(ref:shinipsum)", out.width="100%"}
 knitr::include_graphics("img/shinipsumapp.png")
 ```
 
@@ -161,13 +161,13 @@ Other `{shinipsum}` functions include:
 
 + tables: 
 
-```{r 10-prototyping-6 }
+```{r 10-prototyping-9 }
 random_table(nrow = 3, ncol = 10)
 ```
 
 + print outputs:
 
-```{r 10-prototyping-7 }
+```{r 10-prototyping-10 }
 random_print(type = "model")
 ```
 
@@ -181,7 +181,7 @@ This can be accomplished using the `{fakir}` package, which was primarily create
 
 At the time of writing these lines, the package is only available on GitHub, and can be installed with:
 
-```{r 10-prototyping-8, eval=FALSE}
+```{r 10-prototyping-11, eval=FALSE}
 remotes::install_github("Thinkr-open/fakir")
 ```
 
@@ -193,7 +193,7 @@ This package contains three datasets that are randomly generated when you call t
 
 + `fake_visits()` is a fake dataset for the visits on a website
 
-```{r 10-prototyping-9 }
+```{r 10-prototyping-12 }
 library(fakir)
 fake_visits(from = "2017-01-01", to = "2017-01-31")
 ```
