trying to cache package

--- a/05-workflow.Rmd
+++ b/05-workflow.Rmd
@@ -94,7 +94,7 @@ This step of the workflow will span over two chapters.
 In this chapter, you will be introduced to `{testthat}` for testing your application back-end, tools that are more linked to testing the front-end like NodeJS `puppeteer` module, `{shinytest}` and `{crrry}` for testing interactive logic, `{shinyloadtest}` and `{dockerstats}` for testing your application load. 
 This chapter will also cover `{renv}` and `Docker`, two essential tools for developing in a reproducible environment. 
 
-+ In the _Version Control_ chapter, you will be introduced to `git` and to automated test using Continous Integration platforms like Travis CI or GitHub Actions. 
++ In the _Version Control_ chapter, you will be introduced to `git` and to automated test using Continuous Integration platforms like Travis CI or GitHub Actions. 
 
 ## Part 5: Deploy 
 
