--- a/11-step-by-step-build.Rmd
+++ b/11-step-by-step-build.Rmd
@@ -224,7 +224,7 @@ Perfect for getting a general feeling about the code coverage during the life of
 Note also that if you want to add the code coverage of your application inside a Vignette, you can use the `{covrpage}` [@R-covrpage] package, that bundles the results of `{covr}` coverage report into an interactive, human readable Vignette, that you can later on use as package documentation, or as an article inside your package website.
 `{covrpage}` can be installed from GitHub with `remotes::install_github('metrumresearchgroup/covrpage')`.
 
-#### Continous Integration
+#### Continuous Integration
 
 Continuous Integration, on the other hand, is ensuring the software is still working whenever a change is made by one of the developer. 
 The idea is to add to the centralized version control system (for example Git)
